# slurmgen

./: .gitignore  README.md  pyproject.toml  run_build.sh  run_release.sh  setup.cfg  test.py
example/: job_def.json  job_tmpl.json  run_slurm.py  test.json
example/slurm_output/: test.sh  test.slm
pyslurmconda/: main.py  script.py
slurm_input/: test.json
slurm_output/: test.slm
slurmgen/: __init__.py  gen.py  main.py  run.py  script.py
