# Configuration file for creating the package.
#
# Thomas Guillod - Dartmouth College

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 78.1",
    "setuptools_scm >= 8.2",
    "wheel >= 0.45",
]

[tool.setuptools_scm]
write_to = "slurmgen/version.txt"
version_scheme = "guess-next-dev"

[project]
name = "slurmgen"
license = "BSD-2-Clause"
license-files = ["LICENSE.txt"]
description = "SlurmGen - Simple Manager for Slurm Jobs"
authors = [{name = "Thomas Guillod", email = "guillod@otvam.ch"}]
maintainers = [{name = "Thomas Guillod", email = "guillod@otvam.ch"}]
keywords = [
    "Python",
    "Slurm",
    "HPC",
    "Cluster",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "Environment :: Console",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pip >= 25.0", "build >= 1.2"]
test = ["ruff >= 0.11"]

[project.urls]
Homepage = "https://github.com/otvam/slurmgen"
Repository = "https://github.com/otvam/slurmgen"
Releases = "https://github.com/otvam/slurmgen/releases"
Issues = "https://github.com/otvam/slurmgen/issues"
Tags = "https://github.com/otvam/slurmgen/tags"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
sgen = "slurmgen:run_script"

[tool.setuptools]
packages = ["slurmgen"]
include-package-data = true

[tool.setuptools.package-data]
slurmgen = ["*.txt"]

[tool.ruff]
indent-width = 4
line-length = 160
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["B009", "B010", "UP031", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
