# Configuration file for defining the package data.
# The bootstrapping data is located "pyproject.toml".
#
# Thomas Guillod - Dartmouth College

##############################################################################
[metadata]
##############################################################################

# base data
name = pyslurmconda
description = PySlurmConda - Simple Slurm Manager

# license
license = BSD-2-Clause
license_files = LICENSE.txt

# contributors
author = Thomas Guillod
author_email = guillod@otvam.ch
maintainer = Thomas Guillod
maintainer_email = guillod@otvam.ch

# websites
url = https://github.com/otvam/pyslurmconda
project_urls =
	Repository = https://github.com/otvam/pyslurmconda
	Releases = https://github.com/otvam/pyslurmconda/releases
	Issues = https://github.com/otvam/pyslurmconda/issues
	Tags = https://github.com/otvam/pyslurmconda/tags

# description
long_description = file: README.md
long_description_content_type = text/markdown

# package indexing
keywords =
    Conda
    Python
    Slurm
    HPC
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Natural Language :: English
    Environment :: Console

##############################################################################
[options]
##############################################################################

# package list
packages = pyslurmconda

# dependencies
python_requires = >=3.7

# define package data
[options.package_data]
pyslurmconda = *.txt

# define console script
[options.entry_points]
console_scripts =
    pyslurmconda = pyslurmconda.script:run_script
    pysc = pyslurmconda.script:run_script
